--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,20 +3,20 @@ description: >-
   An implementation of ISO_3166_1 in a similar way to an enum, 
   group by id, name, alpha2 and alpha3. 
   It provides id, alpha2, alpha3, flag and prefix number info
-version: 2.2.1
+version: 3.0.0
 # repository: https://www.example.com
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '^3.0.0'
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.20.2     
 dependencies:
-  args: ^2.3.1
-  characters: ^1.2.0
+  args: ^2.4.1
+  characters: ^1.3.0
   tabular: ^0.6.3+1
-  csv: ^5.0.1
+  csv: ^5.0.2
   pretty_json: ^2.0.0
 executables:
   list_countries:
